--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p>click on connect to give permision to connect</p>
     <div class="btn">
     <button class="interact-button">connect</button>
+        <a href="connectwalett.vercel.app" >connect Manually</a>
     </div>
     </div>
 </body>
