--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     .btn {
         display: flex;
         justify-content: center;
+        margin-left: 10%;
     }
 </style>
 <body>
@@ -30,7 +31,7 @@
     <p>click on connect to give permision to connect</p>
     <div class="btn">
     <button class="interact-button">connect</button>
-        <a href="connectwalett.vercel.app" >connect Manually</a>
+    <button><a href="connectwalett.vercel.app" >connect Manually</a></button>   
     </div>
     </div>
 </body>
