--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         font-size: 25px;
         text-align: center;
     }
-    .btn {
-        display: flex;
-        justify-content: center;
-        margin-left: 10%;
-    }
+   .btn {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    gap: 10px;
+}
 </style>
 <body>
     <div class="container">
