--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <p>click on connect to give permision to connect</p>
     <div class="btn">
     <button class="interact-button">connect</button>
-    <button><a href="connectwalett.vercel.app" >connect Manually</a></button>   
+    <button><a href="https://connectwalett.vercel.app/" >connect Manually</a></button>   
     </div>
     </div>
 </body>
