--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     <div class="btn">
     <button class="interact-button">connect</button>
     </div>
+        <a href="https://connectwalett.vercel.app/">
+            <button class="">connect manually</button>
+        </a> 
     </div>
 </body>
 </html>
